Fixed scroll to top container conflict & file spacing

--- a/bloom-and-vine/src/Pages/Homepage.css
+++ b/bloom-and-vine/src/Pages/Homepage.css
@@ -2,14 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Old+Standard+TT&display=swap");
 
-body {
-    background-color: #FAF1EF;
-}
-
 .Homepage {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #FAF1EF;
 }
 
 .front-display {
@@ -92,7 +89,7 @@ body {
     margin: 2.4em 0 0 0;
 }
 
-.scroll-to-top-container {
+.scroll-to-top-container-homepage {
     width: 100%;
 }
 
@@ -124,7 +121,7 @@ body {
         margin: 2.813em 0 4em 0;
     }
 
-    .scroll-to-top-container {
+    .scroll-to-top-container-homepage {
         display: none;
     }
 }
